--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="1616" y="-413"/>
         </scene>
-        <!--Create Entry View Controller-->
+        <!--Journal-->
         <scene sceneID="PKn-nQ-EeR">
             <objects>
                 <viewController id="aSa-Qo-k27" customClass="CreateEntryViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -59,42 +59,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iid-Z2-Jzt">
-                                <rect key="frame" x="97" y="82" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Lm-Il-obT">
-                                <rect key="frame" x="97" y="150" width="40" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Lm-Il-obT">
+                                <rect key="frame" x="10" y="212" width="394" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IV5-hu-pkO">
-                                <rect key="frame" x="62" y="231" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iid-Z2-Jzt">
+                                <rect key="frame" x="10" y="170" width="394" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="ETu-Ps-P7z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IV5-hu-pkO">
+                                <rect key="frame" x="10" y="240.5" width="394" height="149.5"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="4Lm-Il-obT" firstAttribute="top" secondItem="iid-Z2-Jzt" secondAttribute="bottom" constant="8" id="9E5-h3-11J"/>
+                            <constraint firstItem="eAb-kQ-FuG" firstAttribute="bottom" secondItem="IV5-hu-pkO" secondAttribute="bottom" constant="423" id="FEx-WU-X6I"/>
+                            <constraint firstItem="eAb-kQ-FuG" firstAttribute="trailing" secondItem="IV5-hu-pkO" secondAttribute="trailing" constant="10" id="Sf1-ju-1c0"/>
+                            <constraint firstItem="iid-Z2-Jzt" firstAttribute="top" secondItem="eAb-kQ-FuG" secondAttribute="top" constant="30" id="WQy-bv-UlL"/>
+                            <constraint firstItem="eAb-kQ-FuG" firstAttribute="trailing" secondItem="4Lm-Il-obT" secondAttribute="trailing" constant="10" id="aI8-mR-Q75"/>
+                            <constraint firstItem="iid-Z2-Jzt" firstAttribute="leading" secondItem="eAb-kQ-FuG" secondAttribute="leading" constant="10" id="aXu-Eb-f3k"/>
+                            <constraint firstItem="eAb-kQ-FuG" firstAttribute="trailing" secondItem="iid-Z2-Jzt" secondAttribute="trailing" constant="10" id="bzb-mJ-iaY"/>
+                            <constraint firstItem="4Lm-Il-obT" firstAttribute="leading" secondItem="eAb-kQ-FuG" secondAttribute="leading" constant="10" id="cn7-bC-7G4"/>
+                            <constraint firstItem="IV5-hu-pkO" firstAttribute="leading" secondItem="eAb-kQ-FuG" secondAttribute="leading" constant="10" id="k1T-12-S59"/>
+                            <constraint firstItem="IV5-hu-pkO" firstAttribute="top" secondItem="4Lm-Il-obT" secondAttribute="bottom" constant="8" id="u92-RR-BiR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="eAb-kQ-FuG"/>
                     </view>
                     <toolbarItems>
-                        <barButtonItem systemItem="cancel" id="qbG-Bn-nYL"/>
                         <barButtonItem systemItem="save" id="AoX-4F-3Ei"/>
+                        <barButtonItem width="275" style="plain" systemItem="fixedSpace" id="F7A-Jb-PqJ"/>
+                        <barButtonItem systemItem="cancel" id="lb2-Fg-mWn"/>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" id="cAg-CP-Pd3"/>
+                    <navigationItem key="navigationItem" title="Journal" id="cAg-CP-Pd3"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eDZ-rJ-UR3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="941" y="245"/>
+            <point key="canvasLocation" x="940.57971014492762" y="244.41964285714283"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e2v-iu-yv8">
@@ -134,6 +146,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="LVl-0B-MgA"/>
+        <segue reference="eqh-74-nS6"/>
     </inferredMetricsTieBreakers>
 </document>
