Put and Delete with Firebase

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -162,7 +162,7 @@ Title Line 2</string>
                     <navigationItem key="navigationItem" title="Journal" id="LBz-rQ-HHr">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ovL-iQ-vkB">
                             <connections>
-                                <segue destination="Cgz-J1-anU" kind="presentation" modalPresentationStyle="fullScreen" id="R0t-31-epo"/>
+                                <segue destination="Cgz-J1-anU" kind="presentation" identifier="createEntryModalSegue" modalPresentationStyle="fullScreen" id="R0t-31-epo"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
